--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "date-fns": "^2.28.0",
     "react": "^17.0.2",
+    "react-day-picker": "^8.0.0",
     "react-dom": "^17.0.2"
   },
   "devDependencies": {
