--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
     "@fortawesome/react-fontawesome": "^0.1.18",
     "date-fns": "^2.28.0",
+    "framer-motion": "^6.2.8",
     "react": "^17.0.2",
     "react-day-picker": "^8.0.0",
     "react-dom": "^17.0.2"
